[Offline Pages] Fix official build failure caused by unused variables.

Official build would fail since there'll be unused variables. Guarding
by the same flag used in the file would fix the issue.

BUG=660169

Review-Url: https://codereview.chromium.org/2456173002
Cr-Commit-Position: refs/heads/master@{#428791}

Former-commit-id: 4788453d9c646d7330cf0668739e2f923600101d