chrome/browser/android/offline_pages/evaluation/offline_page_evaluation_bridge.cc
@@ -7,16 +7,32 @@
 #include "base/android/callback_android.h"
 #include "base/android/jni_android.h"
 #include "base/android/jni_string.h"
+#include "base/memory/ptr_util.h"
+#include "base/sequenced_task_runner.h"
+#include "chrome/browser/android/offline_pages/background_scheduler_bridge.h"
+#include "chrome/browser/android/offline_pages/downloads/offline_page_notification_bridge.h"
+#include "chrome/browser/android/offline_pages/evaluation/evaluation_test_scheduler.h"
 #include "chrome/browser/android/offline_pages/offline_page_model_factory.h"
+#include "chrome/browser/android/offline_pages/prerendering_offliner_factory.h"
 #include "chrome/browser/android/offline_pages/request_coordinator_factory.h"
+#include "chrome/browser/net/nqe/ui_network_quality_estimator_service.h"
+#include "chrome/browser/net/nqe/ui_network_quality_estimator_service_factory.h"
 #include "chrome/browser/profiles/profile.h"
 #include "chrome/browser/profiles/profile_android.h"
+#include "chrome/common/chrome_constants.h"
+#include "components/offline_pages/background/offliner_factory.h"
+#include "components/offline_pages/background/offliner_policy.h"
 #include "components/offline_pages/background/request_coordinator.h"
 #include "components/offline_pages/background/request_notifier.h"
+#include "components/offline_pages/background/request_queue.h"
+#include "components/offline_pages/background/request_queue_store.h"
+#include "components/offline_pages/background/request_queue_store_sql.h"
 #include "components/offline_pages/background/save_page_request.h"
+#include "components/offline_pages/downloads/download_notifying_observer.h"
 #include "components/offline_pages/offline_page_item.h"
 #include "components/offline_pages/offline_page_model.h"
 #include "content/public/browser/browser_context.h"
+#include "content/public/browser/browser_thread.h"
 #include "jni/OfflinePageEvaluationBridge_jni.h"
 #include "jni/SavePageRequest_jni.h"
 
@@ -30,6 +46,12 @@ namespace offline_pages {
 namespace android {
 
 namespace {
+const bool kPreferUntriedRequest = false;
+const bool kPreferEarlierRequest = true;
+const bool kPreferRetryCountOverRecency = false;
+const int kMaxStartedTries = 4;
+const int kMaxCompletedTries = 1;
+const int kImmediateRequestExpirationTimeInSeconds = 3600;
 
 void ToJavaOfflinePageList(JNIEnv* env,
                            jobject j_result_obj,
@@ -88,7 +110,8 @@ static ScopedJavaLocalRef<jobject> GetBridgeForProfile(
   if (j_use_evaluation_scheduler) {
     request_coordinator = static_cast<RequestCoordinator*>(
         RequestCoordinatorFactory::GetInstance()->SetTestingFactoryAndUse(
-            profile, &RequestCoordinatorFactory::GetTestingFactory));
+            profile,
+            &OfflinePageEvaluationBridge::GetTestingRequestCoordinator));
   } else {
     request_coordinator =
         RequestCoordinatorFactory::GetForBrowserContext(profile);
@@ -106,6 +129,51 @@ static ScopedJavaLocalRef<jobject> GetBridgeForProfile(
 // static
 bool OfflinePageEvaluationBridge::Register(JNIEnv* env) {
   return RegisterNativesImpl(env);
+}
+
+// static
+std::unique_ptr<KeyedService>
+OfflinePageEvaluationBridge::GetTestingRequestCoordinator(
+    content::BrowserContext* context) {
+  // Create a new OfflinerPolicy with a larger background processing
+  // budget (3600 sec). Other values are the same with default ones.
+  std::unique_ptr<OfflinerPolicy> policy(new OfflinerPolicy(
+      kPreferUntriedRequest, kPreferEarlierRequest,
+      kPreferRetryCountOverRecency, kMaxStartedTries, kMaxCompletedTries,
+      kImmediateRequestExpirationTimeInSeconds));
+  std::unique_ptr<OfflinerFactory> prerenderer_offliner(
+      new PrerenderingOfflinerFactory(context));
+
+  scoped_refptr<base::SequencedTaskRunner> background_task_runner =
+      content::BrowserThread::GetBlockingPool()->GetSequencedTaskRunner(
+          content::BrowserThread::GetBlockingPool()->GetSequenceToken());
+  Profile* profile = Profile::FromBrowserContext(context);
+  base::FilePath queue_store_path =
+      profile->GetPath().Append(chrome::kOfflinePageRequestQueueDirname);
+
+  std::unique_ptr<RequestQueueStoreSQL> queue_store(
+      new RequestQueueStoreSQL(background_task_runner, queue_store_path));
+  std::unique_ptr<RequestQueue> queue(new RequestQueue(std::move(queue_store)));
+  std::unique_ptr<android::EvaluationTestScheduler> scheduler(
+      new android::EvaluationTestScheduler());
+  net::NetworkQualityEstimator::NetworkQualityProvider*
+      network_quality_estimator =
+          UINetworkQualityEstimatorServiceFactory::GetForProfile(profile);
+  // TODO(fgorski): Something needs to keep the handle to the Notification
+  // dispatcher.
+  std::unique_ptr<RequestCoordinator> request_coordinator =
+      base::MakeUnique<RequestCoordinator>(
+          std::move(policy), std::move(prerenderer_offliner), std::move(queue),
+          std::move(scheduler), network_quality_estimator);
+  request_coordinator->SetImmediateScheduleCallbackForTest(
+      base::Bind(&android::EvaluationTestScheduler::ImmediateScheduleCallback,
+                 base::Unretained(scheduler.get())));
+
+  DownloadNotifyingObserver::CreateAndStartObserving(
+      request_coordinator.get(),
+      base::MakeUnique<android::OfflinePageNotificationBridge>());
+
+  return std::move(request_coordinator);
 }
 
 OfflinePageEvaluationBridge::OfflinePageEvaluationBridge(
